<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.main.following.FollowingFragment">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/userImageContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/userImage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/userImage">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/sampleUserName"/>

            <TextView
                android:id="@+id/separatorDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                tools:text="@string/separatorDot"/>

            <TextView
                android:id="@+id/userAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sampleAlias"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="@string/datePosted">
            </TextView>

            <TextView
                android:id="@+id/separatorDot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                tools:text="@string/separatorDot"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:text="@string/timePosted">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textSize="20dp"
                android:id="@+id/content"
                android:textColor="@color/cardview_dark_background"
                android:text="@string/storyContent">

            </TextView>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>

