<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.registerFragment">

    <EditText
        android:id="@+id/firstNameInput"
        android:hint="@string/firstnameInputHint"
        android:autofillHints="@string/firstnameInputHint"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="25sp"
        android:ems="10"
        android:selectAllOnFocus="true"
         />

    <EditText
        android:id="@+id/lastNameInput"
        android:hint="@string/lastnameInputHint"
        android:autofillHints="@string/lastnameInputHint"

        android:layout_alignStart="@+id/firstNameInput"
        android:layout_below="@+id/firstNameInput"
        android:layout_marginTop="0dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="25sp"
        android:ems="10"
        android:selectAllOnFocus="true"/>


    <EditText
        android:id="@+id/usernameInput"
        android:hint="@string/usernameLoginHint"
        android:autofillHints="@string/usernameLoginHint"

        android:layout_alignStart="@+id/lastNameInput"
        android:layout_below="@+id/lastNameInput"
        android:layout_marginTop="0dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="25sp"
        android:ems="10"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/passwordInput"
        android:autofillHints="@string/passwordLoginHint"
        android:hint="@string/passwordLoginHint"

        android:layout_alignStart="@+id/usernameInput"
        android:layout_below="@+id/usernameInput"
        android:layout_marginTop="0dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:ems="10"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/passwordConfirmInput"
        android:autofillHints="@string/passwordConfirmLoginHint"
        android:hint="@string/passwordConfirmLoginHint"

        android:layout_alignStart="@+id/passwordInput"
        android:layout_below="@+id/passwordInput"
        android:layout_marginTop="0dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:ems="10"
        android:selectAllOnFocus="true"/>

    <Button
        android:id="@+id/uploadPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordConfirmInput"
        android:layout_centerHorizontal="true"
        android:text="@string/upload_profile_picture"
        android:textSize="12sp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:minHeight="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadPhotoButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/registerButtonText" />

</RelativeLayout>