<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/tweeterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweeterTitle"
        android:gravity="center"
        android:textSize="80sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:id="@+id/names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="by Colt, Taylor, and Landen"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_below="@+id/tweeterTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        />



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/names"
        android:layout_marginTop="30dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_tab"
            android:id="@+id/signInTab"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_tab"
            android:id="@+id/registerTab"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/tabViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabs"
        android:layout_marginTop="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp" />


</RelativeLayout>